--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/skull.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="version" content="%VITE_APP_VERSION%" />
     <title>o5</title>
 
     <link href="https://fonts.googleapis.com" rel="preconnect">
